@@ -339,7 +339,7 @@ include_once 'include/page_header.php';
 		$applications = get_request('applications',array());
 		$delay_flex = get_request('delay_flex',array());
 		$db_delay_flex = '';
-		foreach($delay_flex as $val)
+		foreach($delay_flex as $num => $val)
 			$db_delay_flex .= $val['delay'].'/'.$val['period'].';';
 		$db_delay_flex = trim($db_delay_flex,';');
 
@@ -370,7 +370,7 @@ include_once 'include/page_header.php';
 				'delay_flex'		=> $db_delay_flex,
 				'params'			=> get_request('params'),
 				'ipmi_sensor'		=> get_request('ipmi_sensor'));
-				
+
 		if(isset($_REQUEST['itemid'])){
 			DBstart();
 
